menghubungkan github ke cpanel

--- a/fiqih.html
+++ b/fiqih.html
@@ -17,7 +17,7 @@
       <div class="brand">
         <a href="index.html" class="logo">
           <span class="logo-icon">◆</span>
-          <h1>ZakatCalc</h1>
+          <h1>Kalkulator Zakat Maal</h1>
         </a>
         <p class="tagline">Perhitungan Zakat yang Tepat & Terpercaya</p>
       </div>
