--- a/kalkulator.html
+++ b/kalkulator.html
@@ -23,9 +23,9 @@
       </div>
       <nav class="nav" id="main-nav" aria-label="Navigasi utama">
         <a href="index.html" class="nav-link">Beranda</a>
-        <a href="dalil.html" class="nav-link">Dalil & Fatwa</a>
-        <a href="fiqih.html" class="nav-link">Fiqih Harian</a>
-        <a href="laz.html" class="nav-link">LAZ / UPZ</a>
+        <a href="dalil" class="nav-link">Dalil & Fatwa</a>
+        <a href="fiqih" class="nav-link">Fiqih Harian</a>
+        <a href="laz" class="nav-link">LAZ / UPZ</a>
       </nav>
       <button class="nav-toggle" id="nav-toggle" aria-label="Toggle menu">
         <span></span>
