--- a/fiqih.html
+++ b/fiqih.html
@@ -23,10 +23,10 @@
       </div>
       <nav class="nav" id="main-nav" aria-label="Navigasi utama">
         <a href="index.html" class="nav-link">Beranda</a>
-        <a href="kalkulator.html" class="nav-link">Kalkulator</a>
-        <a href="dalil.html" class="nav-link">Dalil & Fatwa</a>
-        <a href="fiqih.html" class="nav-link active">Fiqih Harian</a>
-        <a href="laz.html" class="nav-link">LAZ / UPZ</a>
+        <a href="kalkulator" class="nav-link">Kalkulator</a>
+        <a href="dalil" class="nav-link">Dalil & Fatwa</a>
+        <a href="fiqih" class="nav-link active">Fiqih Harian</a>
+        <a href="laz" class="nav-link">LAZ / UPZ</a>
       </nav>
       <button class="nav-toggle" id="nav-toggle" aria-label="Toggle menu" aria-expanded="false">
         <span></span>
@@ -191,10 +191,10 @@
         <p class="footer-text">Panduan fiqih berdasarkan Al-Quran, Hadits, dan pendapat ulama terpercaya.</p>
         <div class="footer-links">
           <a href="index.html">Beranda</a>
-          <a href="kalkulator.html">Kalkulator</a>
-          <a href="dalil.html">Dalil & Fatwa</a>
-          <a href="fiqih.html">Fiqih Harian</a>
-          <a href="laz.html">LAZ / UPZ</a>
+          <a href="kalkulator">Kalkulator</a>
+          <a href="dalil">Dalil & Fatwa</a>
+          <a href="fiqih">Fiqih Harian</a>
+          <a href="laz">LAZ / UPZ</a>
         </div>
         <div class="footer-meta">
           <span>© 2026 ZakatCalc</span>
