fix bug kalkulator, tambah laz page

--- a/dalil.html
+++ b/dalil.html
@@ -134,7 +134,7 @@
           <a href="laz">LAZ / UPZ</a>
         </div>
         <div class="footer-meta">
-          <span>© 2026 ZakatCalc</span>
+          <span>© 2026 Syazaa</span>
         </div>
       </div>
     </footer>
