fix fiqih logic

--- a/fiqih.html
+++ b/fiqih.html
@@ -20,6 +20,9 @@
           <h1>Kalkulator Zakat Maal</h1>
         </a>
         <p class="tagline">Perhitungan Zakat yang Tepat & Terpercaya</p>
+<div class="trust-banner" style="font-size: 0.75rem; color: var(--accent-gold); margin-top: 8px; opacity: 0.8;">
+  <span>✓ Berdasarkan Fatwa DSN MUI</span> • <span>✓ Hadits Shahih Bukhari & Muslim</span>
+</div>
       </div>
       <nav class="nav" id="main-nav" aria-label="Navigasi utama">
         <a href="index.html" class="nav-link">Beranda</a>
